--- a/Digit_sequence_identification.ipynb
+++ b/Digit_sequence_identification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOg1h0tCk1hHvvZh855/Hq3",
+      "authorship_tag": "ABX9TyNocaL9TRgssZ6000nNbyiI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5435,6 +5435,294 @@
             "Max label length: 5\n",
             "Example encoded label: [9, 8, 8]\n",
             "Example padded label: [ 9  8  8 -1 -1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Prepare Inputs for CTC-Connectionist Temporal Classification**"
+      ],
+      "metadata": {
+        "id": "O3Jzd0iuEZ-H"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number_of_pool_layes = 3\n",
+        "# If input image width is 128 and CNN has 3 pooling layers, time step is 128/8 = 16\n",
+        "time_steps = IMG_WIDTH // (2**number_of_pool_layes)\n",
+        "\n",
+        "#Prepare for training\n",
+        "input_length = np.ones((len(x_train),1))*time_steps\n",
+        "label_length = np.array(train_label_lengths).reshape(-1,1)\n",
+        "\n",
+        "#For test data\n",
+        "input_length_test = np.ones((len(x_test),1))*time_steps\n",
+        "label_length_test = np.array(test_label_lengths).reshape(-1,1)\n",
+        "\n",
+        "print(f\"Example input length: {input_length[:5]}\")\n",
+        "print(f\"Example label length: {label_length[:5]}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C6x3vMuLErNL",
+        "outputId": "2cf62159-3178-4bf6-8535-827c08ac9a14"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Example input length: [[16.]\n",
+            " [16.]\n",
+            " [16.]\n",
+            " [16.]\n",
+            " [16.]]\n",
+            "Example label length: [[3]\n",
+            " [4]\n",
+            " [4]\n",
+            " [5]\n",
+            " [5]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Model and Training Pipeline**"
+      ],
+      "metadata": {
+        "id": "Xe1znqpVG9KQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Define CRNN Model(CNN+BiLSTM+Dense+CTC Loss)***"
+      ],
+      "metadata": {
+        "id": "4Al9wf40HJ5v"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "from tensorflow.keras import layers, Model\n",
+        "\n",
+        "num_classes = len(char_list) + 1  # +1 for CTC blank\n",
+        "\n",
+        "#Inputs\n",
+        "input_img = layers.Input(shape=(IMG_WIDTH, IMG_HEIGHT, 1), name='image')\n",
+        "labels = layers.Input(name='label', shape=(max_label_length,), dtype='int32')\n",
+        "input_length = layers.Input(name='input_length', shape=(1,), dtype='int64')\n",
+        "label_length = layers.Input(name='label_length', shape=(1,), dtype='int64')\n",
+        "\n",
+        "#CNN Feature Extractor\n",
+        "x = layers.Conv2D(64, (3,3), activation='relu', padding='same')(input_img)\n",
+        "x = layers.MaxPooling2D(pool_size=(2,2))(x)  #Image width is downscaled to 64\n",
+        "x = layers.Conv2D(128, (3,3), activation='relu', padding='same')(x)\n",
+        "x = layers.MaxPooling2D(pool_size=(2,2))(x)  #Image width is downscaled to 32\n",
+        "x = layers.Conv2D(256, (3,3), activation='relu', padding='same')(x)\n",
+        "x = layers.Conv2D(256, (3,3), activation='relu', padding='same')(x)\n",
+        "x = layers.MaxPooling2D(pool_size=(2,2))(x)  # now width = 16\n",
+        "\n",
+        "#Reshape for RNN\n",
+        "new_shape = (x.shape[1], x.shape[2]*x.shape[3])\n",
+        "x = layers.Reshape(target_shape=new_shape)(x)\n",
+        "\n",
+        "#RNN Layers\n",
+        "x = layers.Bidirectional(layers.LSTM(128, return_sequences=True))(x)\n",
+        "x = layers.Bidirectional(layers.LSTM(128, return_sequences=True))(x)\n",
+        "\n",
+        "#Dense Layer for character prediction\n",
+        "y_pred = layers.Dense(num_classes, activation='softmax', name='dense')(x)\n"
+      ],
+      "metadata": {
+        "id": "asjzfHXQG7Tz"
+      },
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Add CTC Loss***"
+      ],
+      "metadata": {
+        "id": "10WNELpXL4yE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def ctc_loss_fn(args):\n",
+        "  y_pred, labels, input_length, label_length = args\n",
+        "  return tf.keras.backend.ctc_batch_cost(labels, y_pred, input_length, label_length)\n",
+        "\n",
+        "loss_out = layers.Lambda(ctc_loss_fn, name='ctc_loss')(\n",
+        "    [y_pred, labels, input_length, label_length]\n",
+        ")\n"
+      ],
+      "metadata": {
+        "id": "WTDgrYMiL7p2"
+      },
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Create Models***  \n",
+        "- One Model for Training  \n",
+        "- One Model for Prediction"
+      ],
+      "metadata": {
+        "id": "YN16FTFiMZxP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#for inference (predict only)\n",
+        "model = Model(inputs = input_img, outputs = y_pred)\n",
+        "\n",
+        "#for training (compute CTC Loss)\n",
+        "ctc_model = Model(inputs = [input_img, labels, input_length, label_length], outputs=loss_out)\n",
+        "ctc_model.compile(optimizer='adam',\n",
+        "                  loss={'ctc_loss': lambda y_true, y_pred: y_pred})"
+      ],
+      "metadata": {
+        "id": "tSUEqoJxMbmt"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Train the model***"
+      ],
+      "metadata": {
+        "id": "sP97aiGYNoHD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Fix image shape (add channel dimension)\n",
+        "# Ensure correct shape: (num_samples, 32, 128, 1)\n",
+        "print(\"Before reshape:\", x_train.shape, x_test.shape)\n",
+        "\n",
+        "x_train = np.expand_dims(x_train, axis=-1)\n",
+        "x_test = np.expand_dims(x_test, axis=-1)\n",
+        "\n",
+        "print(\"After reshape:\", x_train.shape, x_test.shape)\n",
+        "# Expected: (N, 32, 128, 1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7co4dmfHNphO",
+        "outputId": "e89c3c3a-3d92-4be5-c511-3eff37bafc4e"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Before reshape: (10000, 32, 128) (10000, 32, 128)\n",
+            "After reshape: (10000, 32, 128, 1) (10000, 32, 128, 1)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Prepare Input Dictionaries\n",
+        "train_inputs = {\n",
+        "    'image': x_train,\n",
+        "    'label': padded_y_train,\n",
+        "    'input_length': input_length,\n",
+        "    'label_length': label_length\n",
+        "    }\n",
+        "dummy_y = np.zeros((len(x_train), 1))\n",
+        "\n",
+        "print(\"image:\", x_train.shape)\n",
+        "print(\"label:\", padded_y_train.shape)\n",
+        "print(\"input_length:\", input_length.shape)\n",
+        "print(\"label_length:\", label_length.shape)\n",
+        "print(\"dummy_y:\", dummy_y.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c9ktpLIaQG9j",
+        "outputId": "5d06ac17-2c96-4255-9ece-6bf5b7423cdd"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "image: (10000, 32, 128, 1)\n",
+            "label: (10000, 5)\n",
+            "input_length: (None, 1)\n",
+            "label_length: (None, 1)\n",
+            "dummy_y: (10000, 1)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "val_inputs = {\n",
+        "    'image': x_test,\n",
+        "    'label': padded_y_test,\n",
+        "    'input_length': input_length_test,\n",
+        "    'label_length': label_length_test\n",
+        "}\n",
+        "dummy_val_y = np.zeros((len(x_test), 1))\n",
+        "\n",
+        "ctc_model.fit(train_inputs, dummy_y,\n",
+        "              validation_data=(val_inputs, dummy_val_y),\n",
+        "              epochs=30,\n",
+        "              batch_size=64)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 406
+        },
+        "id": "Wgc7PbCXQNHZ",
+        "outputId": "274f711a-25e0-4ac5-f2af-f6c89c5451c0"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "int() argument must be a string, a bytes-like object or a real number, not 'NoneType'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-895947829.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mdummy_val_y\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m ctc_model.fit(train_inputs, dummy_y,\n\u001b[0m\u001b[1;32m     10\u001b[0m               \u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_inputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdummy_val_y\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m               \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/keras/src/utils/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    120\u001b[0m             \u001b[0;31m# To get the full stack trace, call:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    121\u001b[0m             \u001b[0;31m# `keras.config.disable_traceback_filtering()`\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 122\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    123\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m             \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/keras/src/trainers/data_adapters/data_adapter_utils.py\u001b[0m in \u001b[0;36m<genexpr>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    102\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcheck_data_cardinality\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 104\u001b[0;31m     \u001b[0mnum_samples\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    105\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnum_samples\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m         msg = (\n",
+            "\u001b[0;31mTypeError\u001b[0m: int() argument must be a string, a bytes-like object or a real number, not 'NoneType'"
           ]
         }
       ]
